BUGFIX storege overflow, remove border-left

--- a/app/src/components/organisms/schemaPanel/style.module.css
+++ b/app/src/components/organisms/schemaPanel/style.module.css
@@ -16,19 +16,18 @@
 .PanelSObjectsList {
   display: grid;
   grid-auto-flow: row;
-  
   overflow: hidden;
   gap: 1px;
   grid-template-columns: repeat(auto-fill,  minmax(250px, 1fr));
-  
-  
+  font-family: monospace;
+  color: var(--color-data_text);
+  font-size: 1.1em;
 }
 
 .PanelSObjectItem {
-  font-family: monospace;
-  color: rgb(24, 83, 32);
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: left;
-  vertical-align: text-top;
   vertical-align: middle;
   cursor: pointer;
 }
