--- a/app/src/components/organisms/tableChildRelationShips/style.module.css
+++ b/app/src/components/organisms/tableChildRelationShips/style.module.css
@@ -1,5 +1,5 @@
 
-section {
+.section {
     border-left: 1px solid rgba(196, 187, 187, 0.5);
 
     .grid {
